tests/fixtures/invalid/conditional_aggregate_result.lby
fn pick c bool -> array<i64>
    [1, 2] if c else [3, 4]

fn main -> i64
    len(pick(true))
